; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..msg_hash.c_msg_hash_set_uint.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..msg_hash.c_msg_hash_set_uint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@uint_user_language = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @msg_hash_set_uint(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %9 [
    i32 128, label %6
    i32 129, label %8
  ]

6:                                                ; preds = %2
  %7 = load i32, i32* %4, align 4
  store i32 %7, i32* @uint_user_language, align 4
  br label %9

8:                                                ; preds = %2
  br label %9

9:                                                ; preds = %2, %8, %6
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
